@@ -267,6 +267,21 @@ mono_test_marshal_struct2 (simplestruct2 ss)
 	return 1;
 }
 
+int
+mono_test_marshal_struct_array (simplestruct2 *ss)
+{
+	if (ss[0].a == 0 && ss[0].b == 1 && ss[0].c == 0 &&
+	    !strcmp (ss[0].d, "TEST") && 
+	    ss[0].e == 99 && ss[0].f == 1.5 && ss[0].g == 42 && ss[0].h == (guint64)123)
+		return 0;
+
+	if (ss[1].a == 0 && ss[1].b == 1 && ss[1].c == 0 &&
+	    !strcmp (ss[1].d, "TEST") && 
+	    ss[1].e == 99 && ss[1].f == 1.5 && ss[1].g == 42 && ss[1].h == (guint64)123)
+		return 0;
+
+	return 1;
+}
 
 typedef int (*SimpleDelegate) (int a);
 
